# franca-1

./: .gitignore  CMakeLists.txt  README.md
examples/: TheExample.fidl
francac/: CMakeLists.txt  main.cc
francac/src/: config.cc  config.hh  input_factory.cc  input_factory.hh  input_provider.cc  input_provider.hh  main.cc
lib/: CMakeLists.txt
lib/gtest/: CMakeLists.txt  tst_common.cc  tst_common.hh  tst_fqn_utils.cc  tst_iface.cc  tst_types.cc
lib/include/franca/: ast_node.hh  ast_visitor.hh  entity.hh  input_factory.hh  input_provider.hh  logger.hh  package.hh  parser.hh
lib/include/franca/entity/: entity.hh  integer.hh  integer_size.hh  method.hh  package.hh  type.hh  type_collection.hh  typedef.hh  version.hh
lib/include/franca/entity/attr/: integer_size.hh  named_type.hh  version.hh
lib/src/: ast.cc  ast.hh  ast_flags.hh  ast_node.cc  ast_node_impl.cc  ast_node_impl.hh  entity.cc  entity_impl.cc  entity_impl.hh  inout.hh  input_context.hh  input_cursor.hh  input_line.hh  log.hh  loggable.cc  loggable.hh  loggable_impl.hh  named_entity.hh  parse_error.cc  parse_error.hh  parser.cc  parser_impl.cc  parser_impl.hh  state.cc  state.hh  stm.cc  stm.hh  tokeniser.cc  tokeniser.hh  translation_unit.cc  translation_unit.hh  type_ref.cc  type_ref.hh
lib/src/algo/: test_if_all.hh
lib/src/entity/: entity.cc  entity_impl.cc  entity_impl.hh  integer.cc  integer_impl.cc  integer_impl.hh  method.cc  method_impl.cc  method_impl.hh  package.cc  package_impl.cc  package_impl.hh  type.cc  type_collection.cc  type_collection_impl.cc  type_collection_impl.hh  type_impl.cc  type_impl.hh  typedef.cc  typedef_impl.cc  typedef_impl.hh
lib/src/state/: argument.cc  argument.hh  interface.cc  interface.hh  method.cc  method.hh  package.cc  package.hh  type_collection.cc  type_collection.hh  typedef.cc  typedef.hh  types_or_iface.cc  types_or_iface.hh  version.cc  version.hh
