###############################################################################
 #                                                                            #
 # This file is a part of GeNa project / Franca IDL.                          #
 #                                                                            #
 ###############################################################################

set(SOURCES
    main.cc
)

add_executable(francac
    ${SOURCES}
    ${HEADERS}
)
